--- a/index.html
+++ b/index.html
@@ -843,6 +843,115 @@
         </div>
       </div>
     </section>
+    <section class="events offset">
+      <div class="container evetns__container">
+        <h2 class="evetns__title title">
+          События
+        </h2>
+        <div class="events__slider swiper">
+          <div class="events__btn events__btn--perv swiper-button-prev"></div>
+          <div class="events__btn events__btn--next swiper-button-next"></div>
+          <div class="events__wrapper swiper-wrapper">
+            <div class="events__card swiper-slide">
+              <span class="events__img events__img-1"></span>
+              <div class="evetns__content flex">
+                <i class="events__info-event">
+                  Музей им. Щусевас 20&nbsp;марта по&nbsp;30&nbsp;апреля
+                </i>
+                <h3 class="evetns__subtitle title">
+                  Книжная гравюра в&nbsp;живом восприятии
+                </h3>
+                <p class="events__description description">
+                  Один из&nbsp;ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и&nbsp;сын Ридольфо
+                </p>
+                <div class="evetns__action">
+                  <a href="#" class="events__link-btn">
+                    Подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="events__card swiper-slide">
+              <span class="events__img events__img-2"></span>
+              <div class="evetns__content flex">
+                <i class="events__info-event">
+                  ММОМА 24&nbsp;марта 19:00
+                </i>
+                <h3 class="evetns__subtitle title">
+                  &laquo;Открытая дискуссия&raquo;. Дмитрий Петров и&nbsp;Сергей Ильин.
+                </h3>
+                <p class="events__description description">
+                  Высокий уровень вовлечения представителей целевой аудитории является чётким доказательством простого факта
+                </p>
+                <div class="evetns__action">
+                  <a href="#" class="events__link-btn">
+                    Подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="events__card swiper-slide">
+              <span class="events__img events__img-3"></span>
+              <div class="evetns__content flex">
+                <i class="events__info-event">
+                  Еврейский музей с&nbsp;31&nbsp;марта по&nbsp;21&nbsp;апреля
+                </i>
+                <h3 class="evetns__subtitle title">
+                  Выставка &laquo;Формация 2020&raquo;
+                </h3>
+                <p class="events__description description">
+                  Идейные соображения высшего порядка, а&nbsp;также современная методология разработки играет важную роль в&nbsp;формировании глубокомысленных рассуждений
+                </p>
+                <div class="evetns__action">
+                  <a href="#" class="events__link-btn">
+                    Подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="events__card swiper-slide">
+              <span class="events__img events__img-4"></span>
+              <div class="evetns__content flex">
+                <i class="events__info-event">
+                  ММАМ с&nbsp;8&nbsp;апреля по&nbsp;20&nbsp;мая
+                </i>
+                <h3 class="evetns__subtitle title">
+                  Джон Винзор. Фотографии из&nbsp;серии &laquo;Метафора&raquo;
+                </h3>
+                <p class="events__description description">
+                  Один из&nbsp;ведущих флорентийских художников Кватроченто, основатель художественной династии, которую продолжили его брат Давид и&nbsp;сын Ридольфо
+                </p>
+                <div class="evetns__action">
+                  <a href="#" class="events__link-btn">
+                    Подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="events__card swiper-slide">
+              <span class="events__img events__img-5"></span>
+              <div class="evetns__content flex">
+                <i class="events__info-event">
+                  Третьяковка на&nbsp;Крымском валу с&nbsp;30&nbsp;марта по&nbsp;30&nbsp;апреля
+                </i>
+                <h3 class="evetns__subtitle title">
+                  XXIV Международная биеннале молодого искусства
+                </h3>
+                <p class="events__description description">
+                  Внезапно, реплицированные с&nbsp;зарубежных источников, современные исследования
+                </p>
+                <div class="evetns__action">
+                  <a href="#" class="events__link-btn">
+                    Подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="events__pagination swiper-pagination"></div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
 
